# django-stubs-bug-repo

./: .env  README.md  mypy.ini  pyproject.toml
core/: auth.py  models.py  views.py
core/migrations/: 0001_initial.py
web_api/: settings.py  urls.py
