[tool.poetry]
name = "django-attempt"
version = "0.1.0"
description = ""
authors = ["Steve Dignam <steve@dignam.xyz>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "2.2"
dj_database_url = "^0.5.0"
python-dotenv = "^0.10.5"
psycopg2 = "^2.8"

[tool.poetry.dev-dependencies]
django-stubs = "^1.4"
mypy = "^0.761.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
